--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/nathan-xiao1/discord-level7-bot#readme",
   "dependencies": {
+    "@discordjs/opus": "^0.1.0",
     "discord.js": "^12.1.1",
     "nodemon": "^2.0.2",
     "sequelize": "^5.21.5",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "ytdl-core-discord": "^1.1.0"
   }
 }
